[tool.poetry]
name = "string_grouper"
version = "0.6.2"
description = "String grouper contains functions to do string matching using TF-IDF and the cossine similarity."
authors = ["Chris van den Berg"]
license = "MIT License"
readme = "README.md"

packages = [
    { include = "string_grouper" },
    { include = "string_grouper_utils" },
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0"
scipy = "^1.2.3"
scikit-learn = "^1.4.0"
numpy = "^1.16.6"
sparse_dot_topn_for_blocks = { git = "https://github.com/GuillaumePressiat/sparse_dot_topn_for_blocks"}
topn = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
